[package]
name = "expt01"
version = "0.1.0"
authors = ["saintech <mail@saintech.ru>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/saintech/expt01"

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rand = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"