[package]
name = "expt01"
version = "1.0.1"
authors = ["saintech <mail@saintech.ru>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/saintech/expt01"

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"