[package]
name = "expt01"
version = "1.2.2"
authors = ["saintech <mail@saintech.ru>"]
edition = "2018"
license = "WTFPL"
repository = "https://github.com/saintech/expt01"
readme="README.md"

[dependencies]
tcod = { version = "0.15", features = ["serialization"] }
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.6"